Fix spacing issues and add icons for when I start working on favourite button

--- a/src/assets/styles/home.module.css
+++ b/src/assets/styles/home.module.css
@@ -88,7 +88,7 @@ header::before{
 
 /* Food Card */
 .foodCardContainer{
-    padding: 2em;
+    padding: 1em;
     display: flex;
     flex-wrap: wrap;
     
